http funcionality with proxy for dev

--- a/src/app/protected/protected/protected.component.html
+++ b/src/app/protected/protected/protected.component.html
@@ -1,4 +1,6 @@
 
 <div class="container-fluid">
     <h1>Protected - you shouldn't be here if not signed in</h1>
+    <pre><code>{{ data | json }}</code></pre>
+
 </div>
