--- a/src/app/shared/toast/toast.component.html
+++ b/src/app/shared/toast/toast.component.html
@@ -1,7 +1,7 @@
 <!-- Toast -->
 
 <!-- For Overlay -->
-<div style="position: relative;">
+<div style="position: relative; z-index: 10;">
 
     <!-- Flexbox container for aligning the toasts: position-fixed class do the overlay -->
     <div aria-live="polite" aria-atomic="true" class="my-toast-flexbox-container d-flex justify-content-center align-items-center w-100">
