--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" [routerLink]="['signup']">Sign Up</a>
+                <a class="nav-link active" aria-current="page" [routerLink]="['register']">Sign Up</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" [routerLink]="['signin']">Sign In</a>
+                <a class="nav-link" [routerLink]="['login']">Sign In</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" [routerLink]="['protected']">Protected</a>
