--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -20,7 +20,7 @@
         
             <ul class="navbar-nav me-2 mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" [routerLink]="['login']" (click)="logOut()">Logout</a>
                 </li>
             </ul>
         </div>
